# gdf

./: .gitignore  README.md  models.json  pyproject.toml  seeds.txt
.github/workflows/: deploy-hub.yml
infra/: Caddyfile  cloudformation.yml  gdf-hub.service  setup.sh
scripts/: run_hub.sh
src/gdf/: __init__.py  api.py  bpe.py  cli.py  config.py  crawler.py  device.py  distributed.py  fetcher.py  growth.py  merging.py  model.py  registry.py  selflearn.py  serialization.py  specialists.py  tokenizer.py  torrent.py  trainer.py  updater.py
tests/: test_merging.py  test_model.py  test_registry.py  test_security.py  test_torrent.py  test_trainer.py
